feat: Actualizar configuración de Jest y agregar soporte para archivos .workspace.tsx; añadir nuevas traducciones en inglés y español

--- a/translations/en.json
+++ b/translations/en.json
@@ -11,6 +11,7 @@
   "add": "Add",
   "addCase": "Add case",
   "addData": "Add data",
+  "additionalNotes": "Any additional notes",
   "additionalServices": "Pediatría y Servicios Adicionales",
   "addPNSContact": "Add PNS Contact",
   "addRelationship": "Add relationship",
@@ -20,9 +21,11 @@
   "admittingDoctor": "Admitting Doctor",
   "adverseReactionRecord": "Registro de Reacciones Adversas a Vacunas",
   "adverseReactions": "Reacciones Adversas",
+  "affection": "Does the child receive affection?",
   "affectiveBond": "Vínculo Afectivo",
   "age": "Age",
   "ageGroupDetails": "Age group details",
+  "agreements": "Agreements and Commitments",
   "alcoholUse": "Alcohol Use",
   "alcoholUseDuration": "Alcohol Use Duration",
   "alive": "Alive",
@@ -34,6 +37,10 @@
   "Anamnesis": "Anamnesis",
   "anatomy": "Anatomía",
   "antecedentes": "Medical History",
+  "anthropometrics": "Datos Antropométricos del Recién Nacido",
+  "anthropometricsNowAvailable": "Ahora visibles en la página de Datos Antropométricos",
+  "anthropometricsRecorded": "Datos Antropométricos registrados",
+  "anthropometricsSaveError": "Error guardando los datos antropométricos",
   "apgar10Min": "Apgar 10 Minutos",
   "apgar1Min": "Apgar 1 Minuto",
   "apgar5Min": "Apgar 5 Minutos",
@@ -43,9 +50,12 @@
   "appointmentToFulfill": "Select appointment to fulfill",
   "appointmentType": "Appointment type",
   "AtencionesPuerperio": "Postpartum Care",
+  "attendedBy": "Attended By",
   "babyGivenVitaminD": "Baby Given Vitamin K",
   "balanceOverview": "Fluid Balance",
   "baselineHivStatus": "Baseline HIV Status",
+  "baselineInformation": "Baseline Information",
+  "baselineStatus": "HIV Status",
   "bilingual": "Bilingüe (Español/Quechua)",
   "biometrics_lower": "biometrics",
   "birthInjuriesTrauma": "Birth Injuries/Trauma",
@@ -54,12 +64,15 @@
   "birthTypes": "Tipos de Parto",
   "bloodGroup": "Blood Group",
   "bloodLoss": "Blood Transfusion Done",
+  "bloodPressure": "Blood Pressure (mmHg)",
   "bloodTransfusion": "Blood Transfusion",
   "bodyPosition": "Posición del Cuerpo",
   "bodyTemperature": "Temperatura Corporal",
   "breastfeedingCounseling": "Consejeria de Lactancia Materna",
   "cancel": "Cancel",
+  "cannotDrink": "Cannot drink or breastfeed",
   "caracteristicaLoquios": "Característica de Loquios",
+  "caregiver": "Who takes care of the child?",
   "caseEncounter": "Case management encounters",
   "caseManagementFormTitle": "Formulario de Seguimiento de Pacientes",
   "caseManagemet": "Case Managemet",
@@ -72,6 +85,7 @@
   "chartView": "Chart View",
   "checkFilters": "Check the filters above",
   "checkForErrors": "Por favor revise el formulario e intente nuevamente",
+  "checkForValidity": "Some of the values entered may be invalid",
   "chestCircumference": "Chest Circumference",
   "childImmunizationSchedule": "Esquema de Vacunación Infantil",
   "chronicDisease": "Chronic Disease",
@@ -79,13 +93,20 @@
   "clientEligibility": "Eligible",
   "clinicalEncounter": "Clinical Encounter",
   "clinicalStatus": "Clinical status",
+  "clinicalStatusRequired": "A clinical status is required",
   "clinicalViews": "Clinical views",
   "completed": "Administrado",
   "condition": "Condition",
   "conditionNowVisible": "It is now visible on the Conditions page",
+  "conditionRequired": "A condition is required",
   "conditions": "Conditions",
   "conditionSaved": "Condition saved",
   "conditionUpdated": "Condition updated",
+  "consultationDate": "Consultation Date",
+  "consultationDetails": "Consultation Details",
+  "consultationReason": "Reason for Consultation",
+  "consultationSaved": "Consultation Saved",
+  "consultationTime": "Consultation Time",
   "contact": "Contact",
   "contactCreated": "Contact created",
   "contacted": "Contacted",
@@ -103,7 +124,10 @@
   "culturalNotesPlaceholder": "Observaciones sobre factores culturales, familiares o del entorno que puedan influir en el desarrollo...",
   "currentPregnancy": "Embarazo Actual",
   "customViews": "In this section, you'll find custom clinical views tailored to patients' conditions and enrolled care programs.",
+  "dangerSigns": "Danger Signs",
   "dataDisplayed": "Data displayed",
+  "dataNowAvailable": "They are now visible on the Perinatal Register",
+  "dataSaved": "Data has been saved successfully.",
   "dataTable": "Data table",
   "dataTabs": "Data selection tabs",
   "date": "Schrduled date",
@@ -117,6 +141,7 @@
   "delete": "Delete",
   "deliveryOrAbortion": "Delivery or Abortion",
   "deliveryType": "Delivery Type",
+  "demographics": "Demographics",
   "department": "Department",
   "desarrolloCognitivo": "Desarrollo Cognitivo",
   "desarrolloLenguaje": "Desarrollo del Lenguaje",
@@ -125,6 +150,7 @@
   "descentOfHead": "Descent of Head",
   "descriptionRequired": "Debe ingresar una descripción de la reacción",
   "detailedBreakdown": "Desglose Detallado",
+  "diagnoses": "Diagnoses",
   "Diagnóstico": "Diagnosis",
   "diastolic": "Diastolic",
   "diastolicBP": "Diastolic BP (mmHg)",
@@ -153,8 +179,11 @@
   "endRelationship": "End relationship",
   "enterCondition": "Enter condition",
   "error": "Error",
+  "errorCreatingCondition": "Error creating condition",
+  "errorLoadingData": "Error loading data",
   "errorLoadingPatient": "Error Loading Patient Data",
   "errorState": "Error al cargar la leyenda",
+  "errorUpdatingCondition": "Error updating condition",
   "esophagus": "Esophageal Patency",
   "EstadoAdministraciónVitaminaA": "Vitamin A Administration Status",
   "EstadoGeneral": "General Condition",
@@ -165,8 +194,10 @@
   "examenFísicoTórax": "Chest Physical Examination",
   "ExamenGenitalesExternos": "External Genital Examination",
   "failedDeleting": "couldn't be deleted",
+  "failedSavingRelationship": "Relationship could not be saved",
   "familyContacts": "Family contacts",
   "familyRelationshipFormTitle": "Family Relationship Form",
+  "fatherInvolvement": "Does the father participate in care?",
   "fechaYHoraAtencion": "Date and Time of the Appointment",
   "feedingOrders": "Feeding Orders",
   "feedingTime": "Tiempo que el Bebé Mamó (min)",
@@ -178,11 +209,17 @@
   "finalDischargeDiagnosis": "Final Discharge Diagnosis",
   "finalOutcome": "Final Outcome",
   "FirmaYSello": "Signature and Stamp",
+  "fluidBalance": "Balance de Líquidos",
+  "fluidBalanceNowAvailable": "Ahora visible en la página de Balance de Líquidos",
+  "fluidBalanceRecorded": "Balance de Líquidos registrado",
+  "fluidBalanceSaveError": "Error guardando el balance de líquidos",
   "foetalPresentation": "Foetal Presentation",
   "following": "Seguimiento",
   "followUpDate": "Follow Up Date",
   "fontanelle": "Fontanelle",
   "fontanelleOther": "Other (Fontanelle)",
+  "formInvalidFields": "Please review the following fields:",
+  "formTitle": "Fill in the form details",
   "frecuenciaCardiaca": "Heart Rate",
   "frecuenciaCardiacaFetal": "Fetal Heart Rate (per min.)",
   "gastricLavage": "Lavado Gástrico",
@@ -195,6 +232,7 @@
   "gestationalSize": "Gestational Size",
   "gravidez": "Pregnancy",
   "growthChart": "Growth Chart",
+  "growthCondition": "Growth Condition",
   "headCircumference": "Head Circumference (cm)",
   "heartRate": "Heart Rate (bpm)",
   "height": "Height (cm)",
@@ -206,6 +244,7 @@
   "htsResult": "Final result",
   "htsScreening": "HTS Screening",
   "htsTestType": "Test type",
+  "illnessDuration": "Duration of Illness",
   "imc": "Body mass index (BMI)",
   "immediateAssessment": "Valoración Inmediata del Recién Nacido",
   "immediateAttention": "Atención Inmediata",
@@ -219,6 +258,7 @@
   "inPatientSummary": "In Patient Summary",
   "involucionUterina": "Involución Uterina",
   "ipvOutcome": "IPV Outcome",
+  "ipvQuestions": "IPV Questions",
   "itemsPerPage": "Items per page",
   "kidHistory": "Antecedentes Patologicos",
   "labourAndDelivery": "Parto y Puerperio",
@@ -229,6 +269,7 @@
   "legend": "Leyenda",
   "legendItems": "Elementos de la leyenda",
   "lenguaje": "Lenguaje",
+  "lethargy": "Lethargy or coma",
   "limbs": "Limbs",
   "limbsOther": "Other fro limbs",
   "limite": "Límite",
@@ -242,6 +283,8 @@
   "loadingPatient": "Loding Patient...",
   "location": "Location",
   "male": "Masculino",
+  "malnutrition": "Severe visible malnutrition",
+  "manager": "Case Manager",
   "manageVaccinationSchedule": "Manage Schedule",
   "maternaHistory": "Antecedente de Historia Materna",
   "maternalCondition": "Maternal Condition",
@@ -277,8 +320,11 @@
   "newbornVitals": "Signos Vitales del Recién Nacido",
   "newCredEncounter": "New CRED Encounter",
   "next": "Next",
+  "nextAppointment": "Next Appointment",
   "nextMonth": "Next month",
   "nipples": "nipples",
+  "no": "No",
+  "noBreastfeeding": "Does not want to breastfeed or suck",
   "noChartDataAvailable": "No chart data available",
   "noConditionsToDisplay": "No conditions to display",
   "noContactToDisplay": "There is no contact data to display for this patient.",
@@ -297,15 +343,18 @@
   "normalBajo": "Normal Bajo",
   "nose": "nose",
   "noseOther": "Other for nose",
+  "nosologicalDiagnosis": "Nosological or Syndromic Diagnosis",
   "notApplicable": "No aplica",
   "notes": "Notes",
   "noUpcomingAppointments": "No upcoming appointments found",
   "noUpcomingAppointmentsForPatient": "There are no upcoming appointments to display for this patient",
   "Nueva Atención Postnatal": "New Postnatal Care",
   "nursingDiagnosis": "Diagnóstico de Enfermería",
+  "nutritionalStatus": "Nutritional Status",
   "observacion": "Observación",
   "observation": "Observation",
   "observationGroup": "Grupo de Observación",
+  "observations": "Observations",
   "observationsPlaceholder": "Observaciones adicionales sobre la evaluación...",
   "obstetricFormula": "Fórmula Obstétrica",
   "occurrenceDate": "Fecha de ocurrencia",
@@ -320,6 +369,7 @@
   "pageNumber": "Page number",
   "paginationPageText_one": "of {{count}} pages",
   "paginationPageText_other": "of {{count}} pages",
+  "paleness": "Severe palmar paleness",
   "partoAborto": "Abortion",
   "partoAlTermino": "Full-term deliveries",
   "partograph": "Partograph",
@@ -332,11 +382,17 @@
   "patientFamilyTable": "Patient family table",
   "patientInfo": "Información del Paciente",
   "pending": "Pending",
+  "perinatalDataRecorded": "Perinatal Data Recorded",
+  "perinatalDataSaveError": "Error saving perinatal data",
   "perinatalRecord": "Registro Perinatal",
+  "perinatalRegister": "Perinatal Maternal Carnet",
   "pesoCorporal": "Body Weight (kg)",
   "pesoMadre": "Maternal Weight (kg)",
+  "physicalAssault": "1. Has he/she ever hit, kicked, slapped, or otherwise physically hurt you?",
+  "physicalExam": "Physical Examination",
   "PielYMucosas": "Skin and Mucosa",
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Birth Plan (Check-up/Visit/Not done/N/A)",
+  "pleaseFillField": "Please complete the required fields",
   "pnsAproach": "PNS Aproach",
   "populationType": "Population type",
   "posición": "Position (O/I/NA)",
@@ -345,6 +401,7 @@
   "postnatalControls": "Control del Puerperio",
   "postOperativeComplications": "Post Operative Complications",
   "postOperativeDiagnosis": "Post Operative Diagnosis",
+  "preferedPNSAproach": "Prefered PNS Aproach",
   "pregnancies": "Embarazos",
   "prematureBirths": "Prematuros",
   "prenatalAntecedents": " Prenatal History",
@@ -360,20 +417,27 @@
   "primaryLanguage": "Idioma Primario",
   "priorityOfAdmission": "Priority Of Admission",
   "proximaCita": "Next Appointment",
+  "psychomotorDevelopment": "Psychomotor Development",
   "puerperioInmediato": "Puerperio Inmediato",
   "quechua": "Quechua",
   "reactionDescription": "Descripción de la reacción",
   "reactionPlaceholder": "Describa los síntomas observados...",
   "recommendation": "Recomendación",
   "recommendedProcedure": "Recommended Procedure",
+  "recordAnthropometrics": "Registrar Datos Antropométricos",
+  "recordFluidBalance": "Registrar Balance de Líquidos",
   "recordLabourDetails": "Record labour details",
+  "referral": "Referral",
   "referrals": "Referrals",
   "refreshing": "Refreshing...",
   "registerReaction": "Registrar Reacción",
   "relation": "Relation",
+  "relationship": "Relationship",
   "relationshipConfirmationText": "This will end the relationship. Are you sure you want to proceed?",
   "relationshipError": "Relationship Error",
   "relationshipErrorMessage": "Request Failed",
+  "relationshipType": "Relationship Type",
+  "relationToPatient": "Relation to patient",
   "required": "Required",
   "respiratoryRate": "Respiratory Rate (rpm)",
   "responses": "Respuestas",
@@ -381,15 +445,21 @@
   "resumenPartoPuerperio": "Resumen de Parto y Puerperio",
   "retraso": "Retraso",
   "riesgo": "En riesgo",
+  "riskFactors": "Risk Factors",
+  "RlshipError": "Request Failed.......",
   "rural": "Rural/Andino",
   "save": "Save",
   "saveAndClose": "Guardar y Cerrar",
   "savedRelationship": "Relationship ended successfully",
+  "savedRlship": "Relationship saved successfully",
+  "saveError": "Error saving consultation",
+  "saveRlship": "Save Relationship",
   "saving": "Guardando...",
   "scheduled": "Próxima dosis",
   "searchConditions": "Search conditions",
   "searching": "Searching",
   "seeAll": "See all",
+  "seizures": "Seizures",
   "selectSeverity": "Seleccione severidad",
   "selectVaccine": "Select Vaccine",
   "service": "Service",
@@ -397,6 +467,7 @@
   "severity": "Severidad",
   "severityRequired": "Debe seleccionar la severidad",
   "sex": "Sex",
+  "sexualAssault": "3.Has he/she ever forced you to do something sexually that made you feel uncomfortable?",
   "show": "Show",
   "SignosYsíntomasPrincipales": "Main signs and symptoms",
   "situación": "Situation (L,T,NA)",
@@ -408,9 +479,13 @@
   "spanish": "Español",
   "spinalColumn": "spinal column",
   "spinalColumnOther": "Other for spinal column",
+  "startDate": "Start Date",
   "status": "Status",
   "statusAtDischarge": "Status at Discharge",
   "stillBirths": "Nacidos muertos",
+  "stoolCount": "Stool Count",
+  "stoolGrams": "Stool Weight (g)",
+  "submit": "Save and Close",
   "successfullyDeleted": "successfully deleted",
   "suction": "Succión",
   "summaryOfLaborAndPostpartum": "Resumen del Parto y Puerperio",
@@ -443,12 +518,15 @@
   "testStrategy": "Strategy",
   "therapiesPrescribed": "Therapies Prescribed",
   "thorax": "thorax",
+  "threatened": "2. Has he/she ever threatened to hurt you?",
   "time": "Tiempo",
   "timeRecorded": "Time Recorded",
   "today": "Today",
   "total": "Resultado General",
   "tracingNumber": "Tracing No.",
   "tracingType": "Tracing Type",
+  "trauma": "Trauma / Burns",
+  "treatment": "Treatment",
   "type": "Type",
   "typeOfSurgery": "Type of Surgery",
   "umbilicalCord": " Umbilical cord",
@@ -460,6 +538,8 @@
   "updateVaccinations": "Actualizar vacunas",
   "urban": "Urbano",
   "urbanMarginal": "Urbano Marginal",
+  "urineCount": "Urine Count",
+  "urineGrams": "Urine Volume (g/mL)",
   "uterineHeight": "Uterine Height (cm)",
   "vaccinationSchedule": "Vaccination Schedule",
   "vaccinationScheduleBuilder": "Vaccination Schedule Builder",
@@ -472,7 +552,13 @@
   "viewEncounter": "View",
   "viewSelector": "Select view type",
   "visitDate": "Screening Date",
+  "vitalSigns": "Vital Signs",
   "vitaminKAdmin": "Vitamin K administration",
+  "vomitCount": "Vomit Count",
+  "vomitGramsML": "Vomit Volume (g/mL)",
+  "vomiting": "Vomits everything",
   "weight": "Weight (kg)",
-  "wellChildCare": "Control de Niño Sano"
+  "wellChildCare": "Control de Niño Sano",
+  "wellChildControls": "Well Child Controls",
+  "yes": "Yes"
 }
