--- a/translations/es.json
+++ b/translations/es.json
@@ -11,6 +11,7 @@
   "add": "Agregar",
   "addCase": "Agregar caso",
   "addData": "Agregar datos",
+  "additionalNotes": "Any additional notes",
   "additionalServices": "Pediatría y Servicios Adicionales",
   "addPNSContact": "Agregar contacto de pareja",
   "addRelationship": "Agregar relación",
@@ -20,9 +21,11 @@
   "admittingDoctor": "Médico responsable de la admisión",
   "adverseReactionRecord": "Registro de reacciones adversas",
   "adverseReactions": "Reacciones Adversas",
+  "affection": "Does the child receive affection?",
   "affectiveBond": "Vínculo afectivo",
   "age": "Edad",
   "ageGroupDetails": "Detalles del grupo de edad",
+  "agreements": "Agreements and Commitments",
   "alcoholUse": "Uso de alcohol",
   "alcoholUseDuration": "Duración del consumo de alcohol",
   "alive": "Vivo",
@@ -34,6 +37,10 @@
   "Anamnesis": "Anamnesis",
   "anatomy": "Anatomía",
   "antecedentes": "Antecedentes",
+  "anthropometrics": "Datos Antropométricos del Recién Nacido",
+  "anthropometricsNowAvailable": "Ahora visibles en la página de Datos Antropométricos",
+  "anthropometricsRecorded": "Datos Antropométricos registrados",
+  "anthropometricsSaveError": "Error guardando los datos antropométricos",
   "apgar10Min": "Apgar al minuto 10",
   "apgar1Min": "Apgar al minuto 1",
   "apgar5Min": "Apgar al minuto 5",
@@ -43,9 +50,12 @@
   "appointmentToFulfill": "Seleccione la cita a atender",
   "appointmentType": "Tipo de cita",
   "AtencionesPuerperio": "Atenciones puerperio",
+  "attendedBy": "Attended By",
   "babyGivenVitaminD": "Vitamina D administrada al bebé",
   "balanceOverview": "Balance de líquidos",
   "baselineHivStatus": "Estado basal del VIH",
+  "baselineInformation": "Baseline Information",
+  "baselineStatus": "HIV Status",
   "bilingual": "Bilingüe (Español/Quechua)",
   "biometrics_lower": "Biometría",
   "birthInjuriesTrauma": "Lesiones o traumas al nacer",
@@ -54,12 +64,15 @@
   "birthTypes": "Tipos de Parto",
   "bloodGroup": "Grupo sanguíneo",
   "bloodLoss": "Pérdida de sangre",
+  "bloodPressure": "Blood Pressure (mmHg)",
   "bloodTransfusion": "Transfusión de sangre",
   "bodyPosition": "Posición corporal",
   "bodyTemperature": "Temperatura corporal",
   "breastfeedingCounseling": "Consejeria de Lactancia Materna",
   "cancel": "Cancelar",
+  "cannotDrink": "Cannot drink or breastfeed",
   "caracteristicaLoquios": "Característica de Loquios",
+  "caregiver": "Who takes care of the child?",
   "caseEncounter": "Encuentros de gestión de casos",
   "caseManagementFormTitle": "Formulario de Seguimiento de Pacientes",
   "caseManagemet": "Gestión de casos",
@@ -72,6 +85,7 @@
   "chartView": "Vista de la tabla",
   "checkFilters": "Verifique los filtros seleccionados",
   "checkForErrors": "Por favor revise el formulario e intente nuevamente",
+  "checkForValidity": "Some of the values entered may be invalid",
   "chestCircumference": "Perímetro torácico",
   "childImmunizationSchedule": "Esquema de Vacunación Infantil",
   "chronicDisease": "Enfermedad crónica",
@@ -79,13 +93,20 @@
   "clientEligibility": "Elegibilidad del paciente",
   "clinicalEncounter": "Encuentro clínico",
   "clinicalStatus": "Estado clínico",
+  "clinicalStatusRequired": "A clinical status is required",
   "clinicalViews": "Vistas clínicas",
   "completed": "Completado",
   "condition": "Condición",
   "conditionNowVisible": "Ahora es visible en la página de condiciones",
+  "conditionRequired": "A condition is required",
   "conditions": "Condiciones",
   "conditionSaved": "Condición guardada",
   "conditionUpdated": "Condición actualizada",
+  "consultationDate": "Consultation Date",
+  "consultationDetails": "Consultation Details",
+  "consultationReason": "Reason for Consultation",
+  "consultationSaved": "Consultation Saved",
+  "consultationTime": "Consultation Time",
   "contact": "Contacto",
   "contactCreated": "Contacto creado",
   "contacted": "Contactado",
@@ -103,7 +124,10 @@
   "culturalNotesPlaceholder": "Observaciones sobre factores culturales, familiares o del entorno que puedan influir en el desarrollo...",
   "currentPregnancy": "Embarazo Actual",
   "customViews": "En esta sección, encontrará vistas clínicas personalizadas adaptadas a las condiciones de los pacientes y los programas de atención inscrita.",
+  "dangerSigns": "Danger Signs",
   "dataDisplayed": "Datos mostrados",
+  "dataNowAvailable": "They are now visible on the Perinatal Register",
+  "dataSaved": "Data has been saved successfully.",
   "dataTable": "Tabla de datos",
   "dataTabs": "Pestañas de selección de datos",
   "date": "Programada de fecha",
@@ -117,6 +141,7 @@
   "delete": "Borrar",
   "deliveryOrAbortion": "Partos y Abortos",
   "deliveryType": "Tipo de parto",
+  "demographics": "Demographics",
   "department": "Departamento",
   "desarrolloCognitivo": "Desarrollo Cognitivo",
   "desarrolloLenguaje": "Desarrollo del Lenguaje",
@@ -125,6 +150,7 @@
   "descentOfHead": "Descenso de la presentación",
   "descriptionRequired": "Se requiere una descripción",
   "detailedBreakdown": "Desglose Detallado",
+  "diagnoses": "Diagnoses",
   "Diagnóstico": "Diagnóstico",
   "diastolic": "Diastólico",
   "diastolicBP": "Presión diastólica (mmHg)",
@@ -153,8 +179,11 @@
   "endRelationship": "Finalizar relación",
   "enterCondition": "Ingrese la condición",
   "error": "Error",
+  "errorCreatingCondition": "Error creating condition",
+  "errorLoadingData": "Error loading data",
   "errorLoadingPatient": "Error al cargar los datos del paciente",
   "errorState": "Error al cargar la leyenda",
+  "errorUpdatingCondition": "Error updating condition",
   "esophagus": "Esófago permeable",
   "EstadoAdministraciónVitaminaA": "Estado de administración de vitamina A",
   "EstadoGeneral": "Estado General",
@@ -165,8 +194,10 @@
   "examenFísicoTórax": "Examen físico de tórax",
   "ExamenGenitalesExternos": "Examen de genitales externos",
   "failedDeleting": "No se pudo eliminar",
+  "failedSavingRelationship": "Relationship could not be saved",
   "familyContacts": "Contactos familiares",
   "familyRelationshipFormTitle": "Agregar contacto familiar",
+  "fatherInvolvement": "Does the father participate in care?",
   "fechaYHoraAtencion": "Fecha y hora de atención",
   "feedingOrders": "Órdenes de alimentación",
   "feedingTime": "Tiempo que el Bebé Mamó (min)",
@@ -178,11 +209,17 @@
   "finalDischargeDiagnosis": "Diagnóstico al alta",
   "finalOutcome": "Resultado final",
   "FirmaYSello": "Firma y sello",
+  "fluidBalance": "Balance de Líquidos",
+  "fluidBalanceNowAvailable": "Ahora visible en la página de Balance de Líquidos",
+  "fluidBalanceRecorded": "Balance de Líquidos registrado",
+  "fluidBalanceSaveError": "Error guardando el balance de líquidos",
   "foetalPresentation": "Presentación fetal",
   "following": "Seguimiento",
   "followUpDate": "Fecha de seguimiento",
   "fontanelle": "Fontanela",
   "fontanelleOther": "Otras observaciones sobre fontanela",
+  "formInvalidFields": "Please review the following fields:",
+  "formTitle": "Fill in the form details",
   "frecuenciaCardiaca": "Frecuencia cardíaca",
   "frecuenciaCardiacaFetal": "Frecuencia cardíaca fetal (por min.)",
   "gastricLavage": "Lavado gástrico",
@@ -195,6 +232,7 @@
   "gestationalSize": "Tamaño gestacional",
   "gravidez": "Gravidez",
   "growthChart": "Growth Chart",
+  "growthCondition": "Growth Condition",
   "headCircumference": "Perímetro cefálico",
   "heartRate": "Frecuencia cardíaca",
   "height": "Altura",
@@ -206,6 +244,7 @@
   "htsResult": "Resultado de la prueba de HTS",
   "htsScreening": "Tamizaje de VIH (HTS)",
   "htsTestType": "Tipo de prueba de detección de VIH",
+  "illnessDuration": "Duration of Illness",
   "imc": "IMC - Índice de Masa Corporal",
   "immediateAssessment": "Valoración inmediata del recién nacido",
   "immediateAttention": "Atención Inmediata",
@@ -219,6 +258,7 @@
   "inPatientSummary": "Resumen del paciente",
   "involucionUterina": "Involución Uterina",
   "ipvOutcome": "Resultado de evaluación IPV",
+  "ipvQuestions": "IPV Questions",
   "itemsPerPage": "Elementos por página",
   "kidHistory": "Antecedentes patológicos",
   "labourAndDelivery": "Parto y Puerperio",
@@ -229,6 +269,7 @@
   "legend": "Leyenda",
   "legendItems": "Elementos de la leyenda",
   "lenguaje": "Lenguaje",
+  "lethargy": "Lethargy or coma",
   "limbs": "Extremidades",
   "limbsOther": "Otras observaciones sobre extremidades",
   "limite": "Límite",
@@ -242,6 +283,8 @@
   "loadingPatient": "Cargando paciente ...",
   "location": "Ubicación",
   "male": "Masculino",
+  "malnutrition": "Severe visible malnutrition",
+  "manager": "Case Manager",
   "manageVaccinationSchedule": "Administrar calendario de vacunación",
   "maternaHistory": "Antecedente de Historia Materna",
   "maternalCondition": "Condición materna",
@@ -277,8 +320,11 @@
   "newbornVitals": "Signos Vitales del Recién Nacido",
   "newCredEncounter": "Nuevo control CRED",
   "next": "Siguiente",
+  "nextAppointment": "Next Appointment",
   "nextMonth": "Siguiente mes",
   "nipples": "Pezones",
+  "no": "No",
+  "noBreastfeeding": "Does not want to breastfeed or suck",
   "noChartDataAvailable": "No chart data available",
   "noConditionsToDisplay": "No hay condiciones para mostrar.",
   "noContactToDisplay": "No hay datos de contacto disponibles para este paciente.",
@@ -297,15 +343,18 @@
   "normalBajo": "Normal Bajo",
   "nose": "Nariz",
   "noseOther": "Otras observaciones sobre la nariz",
+  "nosologicalDiagnosis": "Nosological or Syndromic Diagnosis",
   "notApplicable": "No aplica",
   "notes": "Notas",
   "noUpcomingAppointments": "No se encontraron citas próximas",
   "noUpcomingAppointmentsForPatient": "No hay citas próximas registradas para este paciente.",
   "Nueva Atención Postnatal": "Nueva atención postnatal",
   "nursingDiagnosis": "Diagnóstico de enfermería",
+  "nutritionalStatus": "Nutritional Status",
   "observacion": "Observación",
   "observation": "Observación",
   "observationGroup": "Grupo de Observación",
+  "observations": "Observations",
   "observationsPlaceholder": "Observaciones adicionales sobre la evaluación...",
   "obstetricFormula": "Fórmula Obstétrica",
   "occurrenceDate": "Fecha de ocurrencia del evento",
@@ -321,6 +370,7 @@
   "paginationPageText_one": "of {{count}} pages",
   "paginationPageText_many": "of {{count}} pages",
   "paginationPageText_other": "of {{count}} pages",
+  "paleness": "Severe palmar paleness",
   "partoAborto": "Abortos",
   "partoAlTermino": "Partos a término",
   "partograph": "Partograma",
@@ -333,11 +383,17 @@
   "patientFamilyTable": "Tabla de contactos familiares",
   "patientInfo": "Información del Paciente",
   "pending": "Pendiente",
+  "perinatalDataRecorded": "Perinatal Data Recorded",
+  "perinatalDataSaveError": "Error saving perinatal data",
   "perinatalRecord": "Registro Perinatal",
+  "perinatalRegister": "Perinatal Maternal Carnet",
   "pesoCorporal": "Peso corporal (kg)",
   "pesoMadre": "Peso madre (kg)",
+  "physicalAssault": "1. Has he/she ever hit, kicked, slapped, or otherwise physically hurt you?",
+  "physicalExam": "Physical Examination",
   "PielYMucosas": "Piel y mucosas",
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Plan de parto (Control/VisitA/No SE Hizo/Na)",
+  "pleaseFillField": "Please complete the required fields",
   "pnsAproach": "Enfoque de notificación de parejas (PNS)",
   "populationType": "Tipo de población",
   "posición": "Posición (O/I/Na)",
@@ -346,6 +402,7 @@
   "postnatalControls": "Control del Puerperio",
   "postOperativeComplications": "Complicaciones postoperatorias",
   "postOperativeDiagnosis": "Diagnóstico postoperatorio",
+  "preferedPNSAproach": "Prefered PNS Aproach",
   "pregnancies": "Embarazos",
   "prematureBirths": "Prematuros",
   "prenatalAntecedents": "Antecedentes prenatales",
@@ -361,20 +418,27 @@
   "primaryLanguage": "Idioma Primario",
   "priorityOfAdmission": "Prioridad de admisión",
   "proximaCita": "Próxima Cita",
+  "psychomotorDevelopment": "Psychomotor Development",
   "puerperioInmediato": "Puerperio Inmediato",
   "quechua": "Quechua",
   "reactionDescription": "Descripción de la reacción",
   "reactionPlaceholder": "Describa los síntomas observados...",
   "recommendation": "Recomendación",
   "recommendedProcedure": "Procedimiento recomendado",
+  "recordAnthropometrics": "Registrar Datos Antropométricos",
+  "recordFluidBalance": "Registrar Balance de Líquidos",
   "recordLabourDetails": "Registrar detalles del trabajo de parto",
+  "referral": "Referral",
   "referrals": "Referencias",
   "refreshing": "Refrescando...",
   "registerReaction": "Registrar reacción",
   "relation": "Relación",
+  "relationship": "Relationship",
   "relationshipConfirmationText": "Esto terminará con la relación.¿Estás seguro de que quieres continuar?",
   "relationshipError": "Error de relación",
   "relationshipErrorMessage": "Solicitud fallida",
+  "relationshipType": "Relationship Type",
+  "relationToPatient": "Relation to patient",
   "required": "Requerido",
   "respiratoryRate": "Tasa respiratoria (RPM)",
   "responses": "Respuestas",
@@ -382,15 +446,21 @@
   "resumenPartoPuerperio": "Resumen de Parto y Puerperio",
   "retraso": "Retraso",
   "riesgo": "En riesgo",
+  "riskFactors": "Risk Factors",
+  "RlshipError": "Request Failed.......",
   "rural": "Rural/Andino",
   "save": "Guardar",
   "saveAndClose": "Guardar y Cerrar",
   "savedRelationship": "Relación guardada con éxito",
+  "savedRlship": "Relationship saved successfully",
+  "saveError": "Error saving consultation",
+  "saveRlship": "Save Relationship",
   "saving": "Guardando...",
   "scheduled": "Programado",
   "searchConditions": "Condiciones de búsqueda",
   "searching": "Buscando...",
   "seeAll": "Ver Todo",
+  "seizures": "Seizures",
   "selectSeverity": "Seleccione la severidad",
   "selectVaccine": "Seleccione vacuna",
   "service": "Servicio",
@@ -398,6 +468,7 @@
   "severity": "Severidad",
   "severityRequired": "Debe seleccionar la severidad",
   "sex": "Sexo",
+  "sexualAssault": "3.Has he/she ever forced you to do something sexually that made you feel uncomfortable?",
   "show": "Mostrar",
   "SignosYsíntomasPrincipales": "Signos y síntomas principales",
   "situación": "Situación (L, T, Na)",
@@ -409,9 +480,13 @@
   "spanish": "Español",
   "spinalColumn": "Columna vertebral",
   "spinalColumnOther": "Otras observaciones sobre columna vertebral",
+  "startDate": "Start Date",
   "status": "Estado",
   "statusAtDischarge": "Estado al alta",
   "stillBirths": "Nacidos muertos",
+  "stoolCount": "Stool Count",
+  "stoolGrams": "Stool Weight (g)",
+  "submit": "Save and Close",
   "successfullyDeleted": "Eliminado con éxito",
   "suction": "Succión",
   "summaryOfLaborAndPostpartum": "Resumen del Parto y Puerperio",
@@ -444,12 +519,15 @@
   "testStrategy": "Estrategia de prueba",
   "therapiesPrescribed": "Terapias prescritas",
   "thorax": "Tórax",
+  "threatened": "2. Has he/she ever threatened to hurt you?",
   "time": "Tiempo",
   "timeRecorded": "Hora registrada",
   "today": "Hoy",
   "total": "Resultado General",
   "tracingNumber": "N.º de rastreo",
   "tracingType": "Tipo de rastreo",
+  "trauma": "Trauma / Burns",
+  "treatment": "Treatment",
   "type": "Tipo",
   "typeOfSurgery": "Tipo de cirugía",
   "umbilicalCord": "Cordón umbilical",
@@ -461,6 +539,8 @@
   "updateVaccinations": "Actualizar vacunaciones",
   "urban": "Urbano",
   "urbanMarginal": "Urbano Marginal",
+  "urineCount": "Urine Count",
+  "urineGrams": "Urine Volume (g/mL)",
   "uterineHeight": "Altura uterina (cm)",
   "vaccinationSchedule": "Calendario de vacunación",
   "vaccinationScheduleBuilder": "Gestor del calendario de vacunación",
@@ -473,7 +553,13 @@
   "viewEncounter": "Ver encuentro",
   "viewSelector": "Seleccionar tipo de vista",
   "visitDate": "Fecha de visita",
+  "vitalSigns": "Signos Vitales",
   "vitaminKAdmin": "Administración de vitamina K",
+  "vomitCount": "Vomit Count",
+  "vomitGramsML": "Vomit Volume (g/mL)",
+  "vomiting": "Vomits everything",
   "weight": "Peso",
-  "wellChildCare": "Control de Niño Sano"
+  "wellChildCare": "Control de Niño Sano",
+  "wellChildControls": "Controles de Niño Sano",
+  "yes": "Sí"
 }
